[workspace]
members = ["rlay-core-legacy", "rlay-macros", "rlay-core"]

[package]
name = "rlay"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
piet = "0.7.0"
rlay-macros = { path = "./rlay-macros" }
rlay-core = { path = "./rlay-core" }
macroquad = "0.4.14"
derive_more = { version = "2.0.1", features = ["from"] }

[features]
default = ["macroquad"]
raylib = ["rlay-core/raylib"]
macroquad = ["rlay-core/macroquad"]
