[workspace]
members = ["rlay-core-legacy", "rlay-macros", "rlay-core", "rlay-components"]

[package]
name = "rlay"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
piet = "0.7.0"
rlay-macros = { path = "./rlay-macros" }
rlay-core = { path = "./rlay-core" }
rlay-components = { path = "./rlay-components" }
macroquad = "0.4.14"
derive_more = { version = "2.0.1", features = ["from"] }
clap = { version = "4.5.50", features = ["derive"], optional = true }
derive_builder = "0.20.2"

[features]
default = ["macroquad", "examples"]
raylib = ["rlay-core/raylib"]
macroquad = ["rlay-core/macroquad"]
examples = ["dep:clap"]
