[package]
name = "rlay-components"
version = "0.1.0"
edition = "2024"

[dependencies]
piet = "0.7.0"
rlay-core = { path = "../rlay-core" }
macroquad = "0.4.14"
derive_more = { version = "2.0.1", features = ["from"] }
derive_builder = "0.20.2"

[features]
default = ["macroquad"]
raylib = ["rlay-core/raylib"]
macroquad = ["rlay-core/macroquad"]
