[package]
name = "rlay-core-legacy"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
fontdue = "0.9.3"
macroquad = { version = "0.4.14", optional = true }
raylib = { version = "5.5.1", optional = true }
thiserror = "2.0.12"


[features]
default = ["macroquad"]
raylib = ["dep:raylib"]
macroquad = ["dep:macroquad"]
