[package]
name = "rlay-core"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_more = { version = "2.0.1", features = ["from"] }
fontdue = "0.9.3"
macroquad = { version = "0.4.14", optional = true }
raylib = { version = "5.5.1", optional = true, features = []}
thiserror = "2.0.12"
rand = "0.9.2"

[features]
default = ["raylib"]
raylib = ["dep:raylib"]
macroquad = ["dep:macroquad"]
